examples/errors/duplicate_name.ik
fn foo():
    pass

fn foo():
    pass

fn main():
    pass
